C/curses.h

/* These are defined only in curses.h, and are used for conditional compiles */
#define NCURSES_VERSION_MAJOR 5
#define NCURSES_VERSION_MINOR 7
#define NCURSES_VERSION_PATCH 20101128
#define NCURSES_VERSION "5.7"
typedef unsigned chtype;
typedef unsigned mmask_t;
typedef unsigned long chtype;
typedef unsigned long mmask_t;
typedef unsigned char NCURSES_BOOL;
#define bool NCURSES_BOOL
/*
 * X/Open attributes.  In the ncurses implementation, they are identical to the
 * A_ attributes.
 */
#define WA_ATTRIBUTES   A_ATTRIBUTES
#define WA_NORMAL   A_NORMAL
#define WA_STANDOUT A_STANDOUT
#define WA_UNDERLINE    A_UNDERLINE
#define WA_REVERSE  A_REVERSE
#define WA_BLINK    A_BLINK
#define WA_DIM      A_DIM
#define WA_BOLD     A_BOLD
#define WA_ALTCHARSET   A_ALTCHARSET
#define WA_INVIS    A_INVIS
#define WA_PROTECT  A_PROTECT
#define WA_HORIZONTAL   A_HORIZONTAL
#define WA_LEFT     A_LEFT
#define WA_LOW      A_LOW
#define WA_RIGHT    A_RIGHT
#define WA_TOP      A_TOP
#define WA_VERTICAL A_VERTICAL
/* colors */
#define COLOR_BLACK 0
#define COLOR_RED   1
#define COLOR_GREEN 2
#define COLOR_YELLOW    3
#define COLOR_BLUE  4
#define COLOR_MAGENTA   5
#define COLOR_CYAN  6
#define COLOR_WHITE 7
#define acs_map NCURSES_PUBLIC_VAR(acs_map())
/* VT100 symbols begin here */
#define ACS_ULCORNER    NCURSES_ACS('l') /* upper left corner */
#define ACS_LLCORNER    NCURSES_ACS('m') /* lower left corner */
#define ACS_URCORNER    NCURSES_ACS('k') /* upper right corner */
#define ACS_LRCORNER    NCURSES_ACS('j') /* lower right corner */
#define ACS_LTEE    NCURSES_ACS('t') /* tee pointing right */
#define ACS_RTEE    NCURSES_ACS('u') /* tee pointing left */
#define ACS_BTEE    NCURSES_ACS('v') /* tee pointing up */
#define ACS_TTEE    NCURSES_ACS('w') /* tee pointing down */
#define ACS_HLINE   NCURSES_ACS('q') /* horizontal line */
#define ACS_VLINE   NCURSES_ACS('x') /* vertical line */
#define ACS_PLUS    NCURSES_ACS('n') /* large plus or crossover */
#define ACS_S1      NCURSES_ACS('o') /* scan line 1 */
#define ACS_S9      NCURSES_ACS('s') /* scan line 9 */
#define ACS_DIAMOND NCURSES_ACS('`') /* diamond */
#define ACS_CKBOARD NCURSES_ACS('a') /* checker board (stipple) */
#define ACS_DEGREE  NCURSES_ACS('f') /* degree symbol */
#define ACS_PLMINUS NCURSES_ACS('g') /* plus/minus */
#define ACS_BULLET  NCURSES_ACS('~') /* bullet */
/* Teletype 5410v1 symbols begin here */
#define ACS_LARROW  NCURSES_ACS(',') /* arrow pointing left */
#define ACS_RARROW  NCURSES_ACS('+') /* arrow pointing right */
#define ACS_DARROW  NCURSES_ACS('.') /* arrow pointing down */
#define ACS_UARROW  NCURSES_ACS('-') /* arrow pointing up */
#define ACS_BOARD   NCURSES_ACS('h') /* board of squares */
#define ACS_LANTERN NCURSES_ACS('i') /* lantern symbol */
#define ACS_BLOCK   NCURSES_ACS('0') /* solid square block */
/*
 * These aren't documented, but a lot of System Vs have them anyway
 * (you can spot pprryyzz{{||}} in a lot of AT&T terminfo strings).
 * The ACS_names may not match AT&T's, our source didn't know them.
 */
#define ACS_S3      NCURSES_ACS('p') /* scan line 3 */
#define ACS_S7      NCURSES_ACS('r') /* scan line 7 */
#define ACS_LEQUAL  NCURSES_ACS('y') /* less/equal */
#define ACS_GEQUAL  NCURSES_ACS('z') /* greater/equal */
#define ACS_PI      NCURSES_ACS('{') /* Pi */
#define ACS_NEQUAL  NCURSES_ACS('|') /* not equal */
#define ACS_STERLING    NCURSES_ACS('}') /* UK pound sign */
/*
 * Line drawing ACS names are of the form ACS_trbl, where t is the top, r
 * is the right, b is the bottom, and l is the left.  t, r, b, and l might
 * be B (blank), S (single), D (double), or T (thick).  The subset defined
 * here only uses B and S.
 */
#define ACS_BSSB    ACS_ULCORNER
#define ACS_SSBB    ACS_LLCORNER
#define ACS_BBSS    ACS_URCORNER
#define ACS_SBBS    ACS_LRCORNER
#define ACS_SBSS    ACS_RTEE
#define ACS_SSSB    ACS_LTEE
#define ACS_SSBS    ACS_BTEE
#define ACS_BSSS    ACS_TTEE
#define ACS_BSBS    ACS_HLINE
#define ACS_SBSB    ACS_VLINE
#define ACS_SSSS    ACS_PLUS
#define ERR     (-1)
#define OK      (0)
/* values for the _flags member */
#define _SUBWIN         0x01    /* is this a sub-window? */
#define _ENDLINE        0x02    /* is the window flush right? */
#define _FULLWIN        0x04    /* is the window full-screen? */
#define _SCROLLWIN      0x08    /* bottom edge is at screen bottom? */
#define _ISPAD          0x10    /* is this window a pad? */
#define _HASMOVED       0x20    /* has cursor moved since last refresh? */
#define _WRAPPED        0x40    /* cursor was just wrappped */
/*
 * this value is used in the firstchar and lastchar fields to mark
 * unchanged lines
 */
#define _NOCHANGE       -1
/*
 * this value is used in the oldindex field to mark lines created by insertions
 * and scrolls.
 */
#define _NEWINDEX   -1
typedef struct screen  SCREEN;
typedef struct _win_st WINDOW;
typedef chtype  attr_t;     /* ...must be at least as wide as chtype */
/*
 * cchar_t stores an array of CCHARW_MAX wide characters.  The first is
 * normally a spacing character.  The others are non-spacing.  If those
 * (spacing and nonspacing) do not fill the array, a null L'\0' follows.
 * Otherwise, a null is assumed to follow when extracting via getcchar().
 */
#define CCHARW_MAX  5
typedef struct
{
    attr_t  attr;
    wchar_t chars[CCHARW_MAX];
#if 0
#undef NCURSES_EXT_COLORS
#define NCURSES_EXT_COLORS 20101128
    int     ext_color;  /* color pair, must be more than 16-bits */
#endif
}
cchar_t;
struct _win_st
{
    NCURSES_SIZE_T _cury, _curx; /* current cursor position */

    /* window location and size */
    NCURSES_SIZE_T _maxy, _maxx; /* maximums of x and y, NOT window size */
    NCURSES_SIZE_T _begy, _begx; /* screen coords of upper-left-hand corner */

    short   _flags;     /* window state flags */

    /* attribute tracking */
    attr_t  _attrs;     /* current attribute for non-space character */
    chtype  _bkgd;      /* current background char/attribute pair */

    /* option values set by user */
    bool    _notimeout; /* no time out on function-key entry? */
    bool    _clear;     /* consider all data in the window invalid? */
    bool    _leaveok;   /* OK to not reset cursor on exit? */
    bool    _scroll;    /* OK to scroll this window? */
    bool    _idlok;     /* OK to use insert/delete line? */
    bool    _idcok;     /* OK to use insert/delete char? */
    bool    _immed;     /* window in immed mode? (not yet used) */
    bool    _sync;      /* window in sync mode? */
    bool    _use_keypad;    /* process function keys into KEY_ symbols? */
    int     _delay;     /* 0 = nodelay, <0 = blocking, >0 = delay */

    struct ldat *_line; /* the actual line data */

    /* global screen state */
    NCURSES_SIZE_T _regtop; /* top line of scrolling region */
    NCURSES_SIZE_T _regbottom; /* bottom line of scrolling region */

    /* these are used only if this is a sub-window */
    int _parx;      /* x coordinate of this window in parent */
    int _pary;      /* y coordinate of this window in parent */
    WINDOW  *_parent;   /* pointer to parent if a sub-window */

    /* these are used only if this is a pad */
    struct pdat
    {
        NCURSES_SIZE_T _pad_y,      _pad_x;
        NCURSES_SIZE_T _pad_top,    _pad_left;
        NCURSES_SIZE_T _pad_bottom, _pad_right;
    } _pad;

    NCURSES_SIZE_T _yoffset; /* real begy is _begy + _yoffset */

#ifdef NCURSES_WIDECHAR
    cchar_t  _bkgrnd;   /* current background char/attribute pair */
#if 0
    int _color;     /* current color-pair for non-space character */
#endif
#endif
};
/*
 * Bits to set in _nc_event.data.flags
 */
#  define _NC_EVENT_TIMEOUT_MSEC    1
#  define _NC_EVENT_FILE        2
#  define _NC_EVENT_FILE_READABLE   2
typedef struct
{
    int type;
    union
    {
    long timeout_msec;  /* _NC_EVENT_TIMEOUT_MSEC */
    struct
    {
        unsigned int flags;
        int fd;
        unsigned int result;
    } fev;              /* _NC_EVENT_FILE */
    } data;
} _nc_event;
typedef struct
{
    int count;
    int result_flags;   /* _NC_EVENT_TIMEOUT_MSEC or _NC_EVENT_FILE_READABLE */
    _nc_event *events[1];
} _nc_eventlist;
extern NCURSES_EXPORT(int) wgetch_events (WINDOW *, _nc_eventlist *);   /* experimental */
extern NCURSES_EXPORT(int) wgetnstr_events (WINDOW *,char *,int,_nc_eventlist *);/* experimental */
extern NCURSES_EXPORT(int) bkgd (chtype);               /* generated */
extern NCURSES_EXPORT(int) clear (void);                /* generated */
extern NCURSES_EXPORT(void) idcok (WINDOW *, bool);         /* implemented */
extern NCURSES_EXPORT(int) idlok (WINDOW *, bool);          /* implemented */
extern NCURSES_EXPORT(int) leaveok (WINDOW *,bool);         /* implemented */
extern NCURSES_EXPORT(int) notimeout (WINDOW *,bool);           /* implemented */
extern NCURSES_EXPORT(int) refresh (void);              /* generated */
extern NCURSES_EXPORT(int) ripoffline (int, int (*)(WINDOW *, int));    /* implemented */
extern NCURSES_EXPORT(int) scroll (WINDOW *);               /* generated */
/* attributes */

#define NCURSES_ATTR_SHIFT       8
#define NCURSES_BITS(mask,shift) ((mask) << ((shift) + NCURSES_ATTR_SHIFT))
#define A_NORMAL    (1UL - 1UL)
#define A_ATTRIBUTES    NCURSES_BITS(~(1UL - 1UL),0)
#define A_CHARTEXT  (NCURSES_BITS(1UL,0) - 1UL)
#define A_COLOR     NCURSES_BITS(((1UL) << 8) - 1UL,0)
#define A_STANDOUT  NCURSES_BITS(1UL,8)
#define A_UNDERLINE NCURSES_BITS(1UL,9)
#define A_REVERSE   NCURSES_BITS(1UL,10)
#define A_BLINK     NCURSES_BITS(1UL,11)
#define A_DIM       NCURSES_BITS(1UL,12)
#define A_BOLD      NCURSES_BITS(1UL,13)
#define A_ALTCHARSET    NCURSES_BITS(1UL,14)
#define A_INVIS     NCURSES_BITS(1UL,15)
#define A_PROTECT   NCURSES_BITS(1UL,16)
#define A_HORIZONTAL    NCURSES_BITS(1UL,17)
#define A_LEFT      NCURSES_BITS(1UL,18)
#define A_LOW       NCURSES_BITS(1UL,19)
#define A_RIGHT     NCURSES_BITS(1UL,20)
#define A_TOP       NCURSES_BITS(1UL,21)
#define A_VERTICAL  NCURSES_BITS(1UL,22)
#define scroll(win)     wscrl(win,1)
#define bkgd(ch)        wbkgd(stdscr,ch)
#define clear()         wclear(stdscr)
#define refresh()       wrefresh(stdscr)
#define curscr      NCURSES_PUBLIC_VAR(curscr())
#define newscr      NCURSES_PUBLIC_VAR(newscr())
#define stdscr      NCURSES_PUBLIC_VAR(stdscr())
#define ttytype     NCURSES_PUBLIC_VAR(ttytype())
#define COLORS      NCURSES_PUBLIC_VAR(COLORS())
#define COLOR_PAIRS NCURSES_PUBLIC_VAR(COLOR_PAIRS())
#define COLS        NCURSES_PUBLIC_VAR(COLS())
#define ESCDELAY    NCURSES_PUBLIC_VAR(ESCDELAY())
#define LINES       NCURSES_PUBLIC_VAR(LINES())
#define TABSIZE     NCURSES_PUBLIC_VAR(TABSIZE())
extern NCURSES_EXPORT(int) bkgrnd (const cchar_t *);            /* generated:WIDEC */
extern NCURSES_EXPORT(int) getcchar (const cchar_t *, wchar_t*, attr_t*, short*, void*);    /* implemented */
#define bkgrnd(c)           wbkgrnd(stdscr,c)