deimos/ncurses/curses.d

/****************************************************************************
 * Copyright (c) 1998-2009,2010 Free Software Foundation, Inc.              *
 *                                                                          *
 * Permission is hereby granted, free of charge, to any person obtaining a  *
 * copy of this software and associated documentation files (the            *
 * "Software"), to deal in the Software without restriction, including      *
 * without limitation the rights to use, copy, modify, merge, publish,      *
 * distribute, distribute with modifications, sublicense, and/or sell       *
 * copies of the Software, and to permit persons to whom the Software is    *
 * furnished to do so, subject to the following conditions:                 *
 *                                                                          *
 * The above copyright notice and this permission notice shall be included  *
 * in all copies or substantial portions of the Software.                   *
 *                                                                          *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS  *
 * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF               *
 * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.   *
 * IN NO EVENT SHALL THE ABOVE COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,   *
 * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR    *
 * OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR    *
 * THE USE OR OTHER DEALINGS IN THE SOFTWARE.                               *
 *                                                                          *
 * Except as contained in this notice, the name(s) of the above copyright   *
 * holders shall not be used in advertising or otherwise to promote the     *
 * sale, use or other dealings in this Software without prior written       *
 * authorization.                                                           *
 ****************************************************************************/

/****************************************************************************
 *  Author: Zeyd M. Ben-Halim <zmbenhal@netcom.com> 1992,1995               *
 *     and: Eric S. Raymond <esr@snark.thyrsus.com>                         *
 *     and: Thomas E. Dickey                        1996-on                 *
 ****************************************************************************/

/* $Id: curses.h.in,v 1.215 2010/04/29 09:46:38 tom Exp $ */
module deimos.ncurses.curses;

/*
 * We need FILE, etc.  Include this before checking any feature symbols.
 */
import std.c.stdio;
import std.c.stddef;    /* we want wchar_t */
import std.c.stdarg;    /* we need va_list */
import core.stdc.config; /* we need c_ulong */

//#include <ncursesw/unctrl.h>
public import deimos.ncurses.unctrl;

//TODO check if needed... I don't have a windows machine...
version(Win32)
{
  alias wchar wint_t;
}
else
{
  alias dchar wint_t;
}

/* These are defined only in curses.h, and are used for conditional compiles */
immutable enum
{
    NCURSES_VERSION_MAJOR = 5,
    NCURSES_VERSION_MINOR = 7,
    NCURSES_VERSION_PATCH = 20101128
}
/* This is defined in more than one ncurses header, for identification */
string NCURSES_VERSION = "5.7";

extern (C) nothrow
{

/* types */
alias   c_ulong    chtype;
alias   c_ulong    mmask_t;
alias   chtype  attr_t;
alias   int     OPTIONS;
alias   void    SCREEN;


/* attributes */
//Thank you, Dejan Lekic, dejan.lekic @ (gmail.com || kcl.ac.uk)
immutable ubyte NCURSES_ATTR_SHIFT = 8;

chtype NCURSES_BITS(uint mask, ubyte shift)
{   return (mask << (shift + NCURSES_ATTR_SHIFT));  }

immutable enum :chtype
{
    A_NORMAL        = (1u - 1u),
    A_ATTRIBUTES    = NCURSES_BITS(~(1u - 1u),0),
    A_CHARTEXT      = (NCURSES_BITS(1u,0) - 1u),
    A_COLOR         = NCURSES_BITS(((1u) << 8) - 1u,0),
    A_STANDOUT      = NCURSES_BITS(1u,8),
    A_UNDERLINE     = NCURSES_BITS(1u,9),
    A_REVERSE       = NCURSES_BITS(1u,10),
    A_BLINK         = NCURSES_BITS(1u,11),
    A_DIM           = NCURSES_BITS(1u,12),
    A_BOLD          = NCURSES_BITS(1u,13),
    A_ALTCHARSET    = NCURSES_BITS(1u,14),
    A_INVIS         = NCURSES_BITS(1u,15),
    A_PROTECT       = NCURSES_BITS(1u,16),
    A_HORIZONTAL    = NCURSES_BITS(1u,17),
    A_LEFT          = NCURSES_BITS(1u,18),
    A_LOW           = NCURSES_BITS(1u,19),
    A_RIGHT         = NCURSES_BITS(1u,20),
    A_TOP           = NCURSES_BITS(1u,21),
    A_VERTICAL      = NCURSES_BITS(1u,22),

/*
 * X/Open attributes.  In the ncurses implementation, they are identical to the
 * A_ attributes.
 */
    WA_ATTRIBUTES   = A_ATTRIBUTES,
    WA_NORMAL       = A_NORMAL,
    WA_STANDOUT     = A_STANDOUT,
    WA_UNDERLINE    = A_UNDERLINE,
    WA_REVERSE      = A_REVERSE,
    WA_BLINK        = A_BLINK,
    WA_DIM          = A_DIM,
    WA_BOLD         = A_BOLD,
    WA_ALTCHARSET   = A_ALTCHARSET,
    WA_INVIS        = A_INVIS,
    WA_PROTECT      = A_PROTECT,
    WA_HORIZONTAL   = A_HORIZONTAL,
    WA_LEFT         = A_LEFT,
    WA_LOW          = A_LOW,
    WA_RIGHT        = A_RIGHT,
    WA_TOP          = A_TOP,
    WA_VERTICAL     = A_VERTICAL
}


immutable enum :chtype
{
    /* colors */
    COLOR_BLACK   = 0,
    COLOR_RED     = 1,
    COLOR_GREEN   = 2,
    COLOR_YELLOW  = 3,
    COLOR_BLUE    = 4,
    COLOR_MAGENTA = 5,
    COLOR_CYAN    = 6,
    COLOR_WHITE   = 7
}


/* global variables */
__gshared WINDOW*   stdscr;
__gshared WINDOW*   curscr;
__gshared WINDOW*   newscr;
__gshared char      ttytype[];
__gshared int       COLORS;
__gshared int       COLOR_PAIRS;
__gshared int       LINES;
__gshared int       COLS;
__gshared int       TABSIZE;
__gshared int       ESCDELAY;
__gshared chtype    acs_map[256];



/* acs symbols */
/* VT100 symbols begin here */

@property auto ACS_ULCORNER()()
{   return acs_map[cast(ubyte)'l']; }
@property auto ACS_LLCORNER()()
{   return acs_map[cast(ubyte)'m']; }
@property auto ACS_URCORNER()()
{   return acs_map[cast(ubyte)'k']; }
@property auto ACS_LRCORNER()()
{   return acs_map[cast(ubyte)'j']; }
@property auto ACS_LTEE()()
{   return acs_map[cast(ubyte)'t']; }
@property auto ACS_RTEE()()
{   return acs_map[cast(ubyte)'u']; }
@property auto ACS_BTEE()()
{   return acs_map[cast(ubyte)'v']; }
@property auto ACS_TTEE()()
{   return acs_map[cast(ubyte)'w']; }
@property auto ACS_HLINE()()
{   return acs_map[cast(ubyte)'q']; }
@property auto ACS_VLINE()()
{   return acs_map[cast(ubyte)'x']; }
@property auto ACS_PLUS()()
{   return acs_map[cast(ubyte)'n']; }
@property auto ACS_S1()()
{   return acs_map[cast(ubyte)'o']; }
@property auto ACS_S9()()
{   return acs_map[cast(ubyte)'s']; }
@property auto ACS_DIAMOND()()
{   return acs_map[cast(ubyte)'`']; }
@property auto ACS_CKBOARD()()
{   return acs_map[cast(ubyte)'a']; }
@property auto ACS_DEGREE()()
{   return acs_map[cast(ubyte)'f']; }
@property auto ACS_PLMINUS()()
{   return acs_map[cast(ubyte)'g']; }
@property auto ACS_BULLET()()
{   return acs_map[cast(ubyte)'~']; }

/* Teletype 5410v1 symbols begin here */
@property auto ACS_LARROW()()
{   return acs_map[cast(ubyte)',']; }
@property auto ACS_RARROW()()
{   return  acs_map[cast(ubyte)'+'];}
@property auto ACS_DARROW()()
{   return acs_map[cast(ubyte)'.']; }
@property auto ACS_UARROW()()
{   return acs_map[cast(ubyte)'-']; }
@property auto ACS_BOARD()()
{   return acs_map[cast(ubyte)'h']; }
@property auto ACS_LANTERN()()
{   return acs_map[cast(ubyte)'i']; }
@property auto ACS_BLOCK()()
{   return acs_map[cast(ubyte)'0']; }

/*
 * These aren't documented, but a lot of System Vs have them anyway
 * (you can spot pprryyzz{{||}} in a lot of AT&T terminfo strings).
 * The ACS_names may not match AT&T's, our source didn't know them.
 */
@property auto ACS_S3()()
{   return acs_map[cast(ubyte)'p']; }
@property auto ACS_S7()()
{   return acs_map[cast(ubyte)'r']; }
@property auto ACS_LEQUAL()()
{   return acs_map[cast(ubyte)'y']; }
@property auto ACS_GEQUAL()()
{   return acs_map[cast(ubyte)'z']; }
@property auto ACS_PI()()
{   return acs_map[cast(ubyte)'{']; }
@property auto ACS_NEQUAL()()
{   return acs_map[cast(ubyte)'|']; }
@property auto ACS_STERLING()()
{   return acs_map[cast(ubyte)'}']; }

/*
 * Line drawing ACS names are of the form ACS_trbl, where t is the top, r
 * is the right, b is the bottom, and l is the left.  t, r, b, and l might
 * be B (blank), S (single), D (double), or T (thick).  The subset defined
 * here only uses B and S.
 */
@property auto ACS_BSSB()()
{   return ACS_ULCORNER();  }
@property auto ACS_SSBB()()
{   return ACS_LLCORNER();  }
@property auto ACS_BBSS()()
{   return ACS_URCORNER();  }
@property auto ACS_SBBS()()
{   return ACS_LRCORNER();  }
@property auto ACS_SBSS()()
{   return ACS_RTEE();      }
@property auto ACS_SSSB()()
{   return ACS_LTEE();      }
@property auto ACS_SSBS()()
{   return ACS_BTEE();      }
@property auto ACS_BSSS()()
{   return ACS_TTEE();      }
@property auto ACS_BSBS()()
{   return ACS_HLINE();     }
@property auto ACS_SBSB()()
{   return ACS_VLINE();     }
@property auto ACS_SSSS()()
{   return ACS_PLUS();      }


/* error codes */
immutable enum
{
    OK  = 0,
    ERR = -1
}

immutable enum
{
    /* values for the _flags member */
    _SUBWIN       =  0x01,   /* is this a sub-window? */
    _ENDLINE      =  0x02,   /* is the window flush right? */
    _FULLWIN      =  0x04,   /* is the window full-screen? */
    _SCROLLWIN    =  0x08,   /* bottom edge is at screen bottom? */
    _ISPAD        =  0x10,   /* is this window a pad? */
    _HASMOVED     =  0x20,   /* has cursor moved since last refresh? */
    _WRAPPED      =  0x40    /* cursor was just wrappped */
}

/*
 * this value is used in the firstchar and lastchar fields to mark
 * unchanged lines
 */
immutable int _NOCHANGE = -1;

/*
 * this value is used in the oldindex field to mark lines created by insertions
 * and scrolls.
 */
immutable int _NEWINDEX = -1;

/*
 * cchar_t stores an array of CCHARW_MAX wide characters.  The first is
 * normally a spacing character.  The others are non-spacing.  If those
 * (spacing and nonspacing) do not fill the array, a null L'\0' follows.
 * Otherwise, a null is assumed to follow when extracting via getcchar().
 */
immutable size_t CCHARW_MAX = 5;

struct cchar_t
{
  attr_t attr;
  wchar_t chars[CCHARW_MAX];
}

struct  WINDOW
{
    short   cury, curx;
    short   maxy, maxx;
    short   begy, begx;
    short   flags;

    attr_t  attrs;
    chtype  bkgd;
    bool    notimeout,
            clear,
            leaveok,
            scroll,
            idlok,
            idcok,
            immed,
            sync,
            use_keypad;
    int     delay;
    void*   line;
    short   regtop,
            regbottom;
    int     parx,
            pary;
    WINDOW* parent;

    struct pdat
    {
        short   pad_y,      pad_x,
                pad_top,    pad_left,
                pad_bottom, pad_right;
    }
    pdat pad;

    short yoffset;
    cchar_t bkgrnd;
}

struct _nc_event
{
    int type;
    union data
    {
        long timeout_msec;  /* _NC_EVENT_TIMEOUT_MSEC */
        struct fev
        {
            uint    flags;
            int     fd;
            uint    result;
        }              /* _NC_EVENT_FILE */
    }
}


struct _nc_eventlist
{
    int count;
    int result_flags;   /* _NC_EVENT_TIMEOUT_MSEC or _NC_EVENT_FILE_READABLE */
    _nc_event* events[1];
}

int wgetch_events(WINDOW* win, _nc_eventlist* nc);   /* experimental */
int wgetnstr_events(WINDOW* win, char* str, int one, _nc_eventlist* nc);/* experimental */


/*
 * Function prototypes.  This is the complete X/Open Curses list of required
 * functions.  Those marked `generated' will have sources generated from the
 * macro definitions later in this file, in order to satisfy XPG4.2
 * requirements.
 */
